import("//build/ohos.gni")

config("av_opus_package_include") {
  include_dirs = [
    "//vendor/open_source/opus/include",
    "//vendor/open_source/opus/celt",
    "//vendor/open_source/opus/silk",
    "//vendor/open_source/opus/silk/fixed",
    "//vendor/open_source/opus/src",
  ]
  
  cflags = [
    "-Wall",
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wno-unused-parameter",
    "-Wno-deprecated-declarations",
    "-DFIXED_POINT",
    "-DOPUS_BUILD",
    "-DUSE_ALLOCA",
  ]
  
  cflags_cc = []
}

ohos_shared_library("opus_codec"){
  install_enable = true
  public_configs = [
    ":av_opus_package_include",
  ]
  
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  
  configs = [ ":av_opus_package_include" ]
  
  sources = [
    "//third_party/opus/celt/bands.c",
    "//third_party/opus/celt/celt.c",
    "//third_party/opus/celt/celt_decoder.c",
    "//third_party/opus/celt/celt_encoder.c",
    "//third_party/opus/celt/celt_lpc.c",
    "//third_party/opus/celt/cwrs.c",
    "//third_party/opus/celt/entcode.c",
    "//third_party/opus/celt/entdec.c",
    "//third_party/opus/celt/entenc.c",
    "//third_party/opus/celt/kiss_fft.c",
    "//third_party/opus/celt/laplace.c",
    "//third_party/opus/celt/mathops.c",
    "//third_party/opus/celt/mdct.c",
    "//third_party/opus/celt/modes.c",
    "//third_party/opus/celt/pitch.c",
    "//third_party/opus/celt/quant_bands.c",
    "//third_party/opus/celt/rate.c",
    "//third_party/opus/celt/vq.c",
    "//third_party/opus/silk/A2NLSF.c",
    "//third_party/opus/silk/ana_filt_bank_1.c",
    "//third_party/opus/silk/biquad_alt.c",
    "//third_party/opus/silk/bwexpander.c",
    "//third_party/opus/silk/bwexpander_32.c",
    "//third_party/opus/silk/check_control_input.c",
    "//third_party/opus/silk/CNG.c",
    "//third_party/opus/silk/code_signs.c",
    "//third_party/opus/silk/control_audio_bandwidth.c",
    "//third_party/opus/silk/control_codec.c",
    "//third_party/opus/silk/control_SNR.c",
    "//third_party/opus/silk/debug.c",
    "//third_party/opus/silk/decoder_set_fs.c",
    "//third_party/opus/silk/decode_core.c",
    "//third_party/opus/silk/decode_frame.c",
    "//third_party/opus/silk/decode_indices.c",
    "//third_party/opus/silk/decode_parameters.c",
    "//third_party/opus/silk/decode_pitch.c",
    "//third_party/opus/silk/decode_pulses.c",
    "//third_party/opus/silk/dec_API.c",
    "//third_party/opus/silk/encode_indices.c",
    "//third_party/opus/silk/encode_pulses.c",
    "//third_party/opus/silk/enc_API.c",
    "//third_party/opus/silk/gain_quant.c",
    "//third_party/opus/silk/HP_variable_cutoff.c",
    "//third_party/opus/silk/init_decoder.c",
    "//third_party/opus/silk/init_encoder.c",
    "//third_party/opus/silk/inner_prod_aligned.c",
    "//third_party/opus/silk/interpolate.c",
    "//third_party/opus/silk/lin2log.c",
    "//third_party/opus/silk/log2lin.c",
    "//third_party/opus/silk/LPC_analysis_filter.c",
    "//third_party/opus/silk/LPC_fit.c",
    "//third_party/opus/silk/LPC_inv_pred_gain.c",
    "//third_party/opus/silk/LP_variable_cutoff.c",
    "//third_party/opus/silk/NLSF2A.c",
    "//third_party/opus/silk/NLSF_decode.c",
    "//third_party/opus/silk/NLSF_del_dec_quant.c",
    "//third_party/opus/silk/NLSF_encode.c",
    "//third_party/opus/silk/NLSF_stabilize.c",
    "//third_party/opus/silk/NLSF_unpack.c",
    "//third_party/opus/silk/NLSF_VQ.c",
    "//third_party/opus/silk/NLSF_VQ_weights_laroia.c",
    "//third_party/opus/silk/NSQ.c",
    "//third_party/opus/silk/NSQ_del_dec.c",
    "//third_party/opus/silk/pitch_est_tables.c",
    "//third_party/opus/silk/PLC.c",
    "//third_party/opus/silk/process_NLSFs.c",
    "//third_party/opus/silk/quant_LTP_gains.c",
    "//third_party/opus/silk/resampler.c",
    "//third_party/opus/silk/resampler_down2.c",
    "//third_party/opus/silk/resampler_down2_3.c",
    "//third_party/opus/silk/resampler_private_AR2.c",
    "//third_party/opus/silk/resampler_private_down_FIR.c",
    "//third_party/opus/silk/resampler_private_IIR_FIR.c",
    "//third_party/opus/silk/resampler_private_up2_HQ.c",
    "//third_party/opus/silk/resampler_rom.c",
    "//third_party/opus/silk/shell_coder.c",
    "//third_party/opus/silk/sigm_Q15.c",
    "//third_party/opus/silk/sort.c",
    "//third_party/opus/silk/stereo_decode_pred.c",
    "//third_party/opus/silk/stereo_encode_pred.c",
    "//third_party/opus/silk/stereo_find_predictor.c",
    "//third_party/opus/silk/stereo_LR_to_MS.c",
    "//third_party/opus/silk/stereo_MS_to_LR.c",
    "//third_party/opus/silk/stereo_quant_pred.c",
    "//third_party/opus/silk/sum_sqr_shift.c",
    "//third_party/opus/silk/tables_gain.c",
    "//third_party/opus/silk/tables_LTP.c",
    "//third_party/opus/silk/tables_NLSF_CB_NB_MB.c",
    "//third_party/opus/silk/tables_NLSF_CB_WB.c",
    "//third_party/opus/silk/tables_other.c",
    "//third_party/opus/silk/tables_pitch_lag.c",
    "//third_party/opus/silk/tables_pulses_per_block.c",
    "//third_party/opus/silk/table_LSF_cos.c",
    "//third_party/opus/silk/VAD.c",
    "//third_party/opus/silk/VQ_WMat_EC.c",
    "//third_party/opus/silk/fixed/apply_sine_window_FIX.c",
    "//third_party/opus/silk/fixed/autocorr_FIX.c",
    "//third_party/opus/silk/fixed/burg_modified_FIX.c",
    "//third_party/opus/silk/fixed/corrMatrix_FIX.c",
    "//third_party/opus/silk/fixed/encode_frame_FIX.c",
    "//third_party/opus/silk/fixed/find_LPC_FIX.c",
    "//third_party/opus/silk/fixed/find_LTP_FIX.c",
    "//third_party/opus/silk/fixed/find_pitch_lags_FIX.c",
    "//third_party/opus/silk/fixed/find_pred_coefs_FIX.c",
    "//third_party/opus/silk/fixed/k2a_FIX.c",
    "//third_party/opus/silk/fixed/k2a_Q16_FIX.c",
    "//third_party/opus/silk/fixed/LTP_analysis_filter_FIX.c",
    "//third_party/opus/silk/fixed/LTP_scale_ctrl_FIX.c",
    "//third_party/opus/silk/fixed/noise_shape_analysis_FIX.c",
    "//third_party/opus/silk/fixed/pitch_analysis_core_FIX.c",
    "//third_party/opus/silk/fixed/process_gains_FIX.c",
    "//third_party/opus/silk/fixed/regularize_correlations_FIX.c",
    "//third_party/opus/silk/fixed/residual_energy16_FIX.c",
    "//third_party/opus/silk/fixed/residual_energy_FIX.c",
    "//third_party/opus/silk/fixed/schur64_FIX.c",
    "//third_party/opus/silk/fixed/schur_FIX.c",
    "//third_party/opus/silk/fixed/vector_ops_FIX.c",
    "//third_party/opus/silk/fixed/warped_autocorrelation_FIX.c",
    "//third_party/opus/src/analysis.c",
    "//third_party/opus/src/extensions.c",
    "//third_party/opus/src/mapping_matrix.c",
    "//third_party/opus/src/mlp.c",
    "//third_party/opus/src/mlp_data.c",
    "//third_party/opus/src/opus.c",
    "//third_party/opus/src/opus_compare.c",
    "//third_party/opus/src/opus_decoder.c",
    "//third_party/opus/src/opus_encoder.c",
    "//third_party/opus/src/opus_multistream.c",
    "//third_party/opus/src/opus_multistream_decoder.c",
    "//third_party/opus/src/opus_multistream_encoder.c",
    "//third_party/opus/src/opus_projection_decoder.c",
    "//third_party/opus/src/opus_projection_encoder.c",
    "//third_party/opus/src/repacketizer.c",
  ]
  
  deps = []
  external_deps = []
  
  subsystem_name = "open_source" 
  part_name = "opus"
}